name: di
version: 0.2
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: Easy, powerful, structured and typeful logging without monad towers.
description: Easy, powerful, structured and typeful logging without monad towers.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Di Di.Df1 Di.Gen
  other-modules:
    Di.Df1.Render
    Di.Df1.Parser
    Di.Misc
    Di.Sink
    Di.Types
  build-depends:
    attoparsec,
    base >=4.9 && <5.0,
    bytestring,
    containers,
    mmorph,
    mtl,
    stm,
    text,
    time,
    transformers,
    QuickCheck
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
  if !os(windows)
    build-depends: unix

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    bytestring,
    di,
    stm,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck

executable df1
  hs-source-dirs: df1
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O3
  build-depends:
    base,
    di,
    optparse-applicative,
    stm,
    text,
    time,
    QuickCheck
