name: di
version: 0.2
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: Easy, powerful, structured and typeful logging without monad towers.
description: Easy, powerful, structured and typeful logging without monad towers.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Di
    Di.Df1
  other-modules:
    Di.Gen
    Di.Df1.Render
    Di.Df1.Parser
    Di.Misc
    Di.Sink
    Di.Types
  build-depends:
    attoparsec,
    base >=4.9 && <5.0,
    bytestring,
    containers,
    exceptions,
    free,
    lens-family,
    mtl,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    pipes-group,
    pipes-parse,
    stm,
    text,
    time,
    transformers,
    QuickCheck
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
  if !os(windows)
    build-depends: unix

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test src
  main-is: Main.hs
  other-modules:
    Di
    Di.Df1
    Di.Gen
    Di.Df1.Render
    Di.Df1.Parser
    Di.Misc
    Di.Sink
    Di.Types
  build-depends:
    attoparsec,
    base,
    bytestring,
    containers,
    exceptions,
    free,
    lens-family,
    mtl,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    pipes-group,
    pipes-parse,
    stm,
    text,
    time,
    transformers,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck

executable df1
  hs-source-dirs: df1 src
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O2
  other-modules:
    Di
    Di.Df1
    Di.Gen
    Di.Df1.Render
    Di.Df1.Parser
    Di.Misc
    Di.Sink
    Di.Types
  build-depends:
    attoparsec,
    base,
    bytestring,
    exceptions,
    free,
    lens-family,
    mtl,
    optparse-applicative,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    pipes-group,
    pipes-parse,
    stm,
    text,
    transformers,
    time,
    QuickCheck
  if !os(windows)
    build-depends: unix
