name: df1-cli
version: 0.1
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2018
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: Command-line tools for the df1 logging format.
description: Command-line tools for the df1 logging format.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Df1.Cli
  build-depends:
    base >=4.9 && <5.0,
    df1 >=0.1,
    di,
    exceptions,
    optparse-applicative,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    QuickCheck,
    transformers
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

executable df1
  hs-source-dirs: exe
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base, df1-cli
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

