name: di-handle
version: 1.0.1
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017-2018
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: IO support for file handles in di-core
description: IO support for file handles in di-core
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Di.Handle
  build-depends:
    base >=4.9 && <5.0,
    bytestring,
    exceptions,
    di-core
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
  if !os(windows)
     build-depends: unix

