name: di-monad
version: 1.3.1
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017-2018
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: mtl flavoured typeful hierarchical structured logging for di-core.
description: mtl flavoured typeful hierarchical structured logging for di-core.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Di.Monad
  build-depends:
    base >=4.9 && <5.0,
    containers,
    di-core,
    exceptions,
    mtl,
    pipes,
    stm,
    transformers
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

