cabal-version: 1.18
name: di-monad
version: 1.3.5
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
synopsis: mtl flavoured typeful hierarchical structured logging for di-core.
description: mtl flavoured typeful hierarchical structured logging for di-core.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

flag monad-control
  description: Library support: monad-control
  manual: True
  default: True

flag pipes
  description: Library support: pipes
  manual: True
  default: True

flag pipes-safe
  description: Library support: pipes-safe
  manual: True
  default: True

flag primitive
  description: Library support: primitive
  manual: True
  default: True

flag streaming
  description: Library support: streaming
  manual: True
  default: True

flag transformers-base
  description: Library support: transformers-base
  manual: True
  default: True

flag unliftio-core
  description: Library support: unliftio-core
  manual: True
  default: True

flag resourcet
  description: Library support: resourcet
  manual: True
  default: True

flag conduit
  description: Library support: conduit
  manual: True
  default: True

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Di.Monad
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
  build-depends:
    base >=4.9 && <5.0,
    containers,
    di-core,
    exceptions,
    mtl,
    stm,
    transformers

  if flag(monad-control)
    cpp-options: -DFLAG_monad_control -DFLAG_transformers_base
    build-depends: monad-control, transformers-base

  if flag(pipes)
    cpp-options: -DFLAG_pipes
    build-depends: pipes

  if flag(pipes-safe)
    cpp-options: -DFLAG_pipes_safe -DFLAG_pipes -DFLAG_monad_control
                 -DFLAG_transformers_base
    build-depends: pipes-safe, pipes, monad-control, transformers-base

  if flag(primitive)
    cpp-options: -DFLAG_primitive
    build-depends: primitive

  if flag(streaming)
    cpp-options: -DFLAG_streaming -DFLAG_transformers_base
    build-depends: streaming, transformers-base

  if flag(transformers-base)
    cpp-options: -DFLAG_transformers_base
    build-depends: transformers-base

  if flag(unliftio-core)
    cpp-options: -DFLAG_unliftio_core
    build-depends: unliftio-core

  if flag(resourcet)
    cpp-options: -DFLAG_resourcet -DFLAG_primitive -DFLAG_unliftio_core
    build-depends: resourcet, primitive, unliftio-core

  if flag(conduit)
    cpp-options: -DFLAG_conduit -DFLAG_primitive -DFLAG_unliftio_core
                 -DFLAG_resourcet
    build-depends: conduit, primitive, unliftio-core, resourcet

