name: di
version: 1.1
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2017-2018
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: Typeful hierarchical structured logging using di, mtl and df1.
description:
  Typeful hierarchical structured logging using di, mtl and df1.
  .
  This is meta-package bringing in together things from the @di-core@,
  @di-monad@, @di-handle@ and @di-df1@ libraries.
  .
  See the "Di" module for more documentation.
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Di
  build-depends:
    base >=4.9 && <5.0,
    containers,
    df1,
    di-core,
    di-df1,
    di-handle,
    di-monad,
    exceptions
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

